fix build errors