@@ -15,7 +15,6 @@
   </parent>
   <properties>
     <site.installationModule>google-cloud-bigquerystorage</site.installationModule>
-    <surefire.java9.opts/>
   </properties>
   <build>
     <pluginManagement>
@@ -82,7 +81,6 @@
         <configuration>
           <argLine>
             -Xmx2048m
-            ${surefire.java9.opts}
             ${jacoco.agent.argLine}
           </argLine>
           <reuseForks>false</reuseForks>
@@ -356,4 +354,32 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>java9</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>
+                -Xmx2048m
+                --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
+                ${jacoco.agent.argLine}
+              </argLine>
+              <reuseForks>false</reuseForks>
+              <systemPropertyVariables>
+                <arrow.memory.allocator.type>netty</arrow.memory.allocator.type>
+              </systemPropertyVariables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
